--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,13 @@ body{
 	.myTitle	{
 	font-family: 'Shadows Into Light Two', cursive;
 	text-align:center;
+	background: blue;
+
 
 
 	}
 
+	#instructions{
+	background: white;
+		
+	}
